--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "~4.13.3",
-    "body-parser": "~1.13.3"
+    "body-parser": "~1.13.3",
+    "underscore": "~1.8.3"
   }
 }
