--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "underscore": "~1.8.3",
     "sequelize": "~3.5.1",
     "pg": "~4.4.1",
-    "pg-hstore": "~2.3.2"
+    "pg-hstore": "~2.3.2",
+    "bcrypt": "~0.8.5"
   },
   "devdependencies": {
     "express": "~4.13.3",
