Adddd auth token generation to POST /users/login

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "sequelize": "~3.5.1",
     "pg": "~4.4.1",
     "pg-hstore": "~2.3.2",
-    "bcrypt": "~0.8.5"
+    "bcrypt": "~0.8.5",
+    "jsonwebtoken": "~5.0.5",
+    "crypto-js": "~3.1.5"
   },
   "devdependencies": {
     "express": "~4.13.3",
