--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pg-hstore": "~2.3.2",
     "bcrypt": "~0.8.5",
     "jsonwebtoken": "~5.0.5",
-    "crypto-js": "~3.1.5"
+    "crypto-js": "~3.1.5",
+    "promise": "~7.1.1"
   },
   "devdependencies": {
     "express": "~4.13.3",
